[CRD iOS] Fallback to GLES2 when GLES3 is not supported

The percentage of seeing a GLES2-only device is low but it's still
safer to handle that, given that doing so requires only a few more lines.

Bug: 787224
Change-Id: I63650f3ce4c2afe93492b81e30d7075d7007ebdc
Reviewed-on: https://chromium-review.googlesource.com/780801
Reviewed-by: Jamie Walch <jamiewalch@chromium.org>
Commit-Queue: Yuwei Huang <yuweih@chromium.org>
Cr-Commit-Position: refs/heads/master@{#518363}
Former-commit-id: e7b8b2a2fbc4835aca7719a43c9b4b7114540852