remoting/ios/display/gl_display_handler.mm
@@ -119,10 +119,15 @@ void Core::Initialize() {
 
   eagl_context_ = [EAGLContext currentContext];
   if (!eagl_context_) {
-    // TODO(nicholss): For prod code, make sure to check for ES3 support and
-    // fall back to ES2 if needed.
     eagl_context_ =
         [[EAGLContext alloc] initWithAPI:kEAGLRenderingAPIOpenGLES3];
+    if (!eagl_context_) {
+      LOG(WARNING) << "Failed to create GLES3 context. Atempting to create "
+                   << "GLES2 context.";
+      eagl_context_ =
+          [[EAGLContext alloc] initWithAPI:kEAGLRenderingAPIOpenGLES2];
+    }
+    DCHECK(eagl_context_);
     [EAGLContext setCurrentContext:eagl_context_];
   }
 
@@ -130,10 +135,6 @@ void Core::Initialize() {
 
   renderer_proxy_->Initialize(renderer_->GetWeakPtr());
 
-  //  renderer_.RequestCanvasSize();
-
-  // demo_screen_ = new GlDemoScreen();
-  // renderer_->AddDrawable(demo_screen_->GetWeakPtr());
   renderer_->SetDelegate(weak_ptr_);
 }
 
